[fix] reglement UX classement overflow

--- a/client/src/app/components/forms/game-form/game-form.component.scss
+++ b/client/src/app/components/forms/game-form/game-form.component.scss
@@ -44,7 +44,7 @@ h1 {
 li {
     line-height: 3;
     text-align: center;
-    width: 120px;
+    width: 132px;
 }
 
 .button-group {
@@ -83,5 +83,5 @@ button {
 .recordTimeVersus{
     position: relative;
     top: 40px;
-    right:70px;
+    right:80px;
 }
